--- a/code/ear-training/interval-identification/interval-identification.html
+++ b/code/ear-training/interval-identification/interval-identification.html
@@ -26,18 +26,18 @@
     </div>
 
     <div id="guess_containter">
-        <button type="button" class="interval-guess-button" onclick=guess("-2")>Minor 2nd</button>
-        <button type="button" class="interval-guess-button" onclick=guess("+2")>Major 2nd</button>
-        <button type="button" class="interval-guess-button" onclick=guess("-3")>Minor 3rd</button>
-        <button type="button" class="interval-guess-button" onclick=guess("+3")>Major 3rd</button>
-        <button type="button" class="interval-guess-button" onclick=guess("P4")>Perfect 4th</button>
-        <button type="button" class="interval-guess-button" onclick=guess("Tritone")>Tritone</button>
-        <button type="button" class="interval-guess-button" onclick=guess("P5")>Perfect 5th</button>
-        <button type="button" class="interval-guess-button" onclick=guess("-6")>Minor 6th</button>
-        <button type="button" class="interval-guess-button" onclick=guess("+6")>Major 6th</button>
-        <button type="button" class="interval-guess-button" onclick=guess("-7")>Minor 7th</button>
-        <button type="button" class="interval-guess-button" onclick=guess("+7")>Major 7th</button>
-        <button type="button" class="interval-guess-button" onclick=guess("+8")>Octave</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("-2")>Minor 2nd</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("+2")>Major 2nd</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("-3")>Minor 3rd</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("+3")>Major 3rd</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("P4")>Perfect 4th</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("Tritone")>Tritone</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("P5")>Perfect 5th</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("-6")>Minor 6th</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("+6")>Major 6th</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("-7")>Minor 7th</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("+7")>Major 7th</button>
+        <button type="button" class="interval-guess-button" onclick=submitGuess("+8")>Octave</button>
     </div>
 
     <div id="end_quiz_container">
